--- a/index.html
+++ b/index.html
@@ -5,12 +5,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Digital agency uplabs</title>
-  <!-- ======================================= -->
-  <!-- =====         GOOGLE FONTS         ==== -->
-  <!-- ======================================= -->
-
-
-
   <!-- =============================== -->
   <!-- =====       STYLES        ===== -->
   <!-- =============================== -->
@@ -18,7 +12,26 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+<!-- = SITE HEADER = -->
+  <header class="site-header">
+<div class="site-header__container container">
+<a href="index.html" class="site-header__logo logo">
+  <img src="img/logo.svg" alt="Digital ocean's logo" class="logo__img">
+</a>
 
+<!-- = SITENAV = -->
+<nav class="sitenav">
+<ul class="sitenav__list">
+<li class="sitenav__item"><a class="sitenav__link" href="#">Home</a></li>
+<li class="sitenav__item"><a class="sitenav__link" href="#">About</a></li>
+<li class="sitenav__item"><a class="sitenav__link" href="#">Services</a></li>
+<li class="sitenav__item"><a class="sitenav__link" href="#">Reviews</a></li>
+</ul>
+</nav>
+
+<a class="button site-header__button" href="#">Get Started</a>
+</div>
+  </header>
 
 
 <!-- ************************ -->
