--- a/index.html
+++ b/index.html
@@ -12,32 +12,55 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-<!-- = SITE HEADER = -->
+  <!-- = SITE HEADER = -->
   <header class="site-header">
-<div class="site-header__container container">
-<a href="index.html" class="site-header__logo logo">
-  <img src="img/logo.svg" alt="Digital ocean's logo" class="logo__img">
-</a>
+    <div class="site-header__container container">
+      <a href="index.html" class="site-header__logo logo">
+        <img src="img/logo.svg" alt="Digital ocean's logo" class="logo__img">
+      </a>
 
-<!-- = SITENAV = -->
-<nav class="sitenav">
-<ul class="sitenav__list">
-<li class="sitenav__item"><a class="sitenav__link" href="#">Home</a></li>
-<li class="sitenav__item"><a class="sitenav__link" href="#">About</a></li>
-<li class="sitenav__item"><a class="sitenav__link" href="#">Services</a></li>
-<li class="sitenav__item"><a class="sitenav__link" href="#">Reviews</a></li>
-</ul>
-</nav>
+      <!-- = SITENAV = -->
+      <nav class="sitenav">
+        <ul class="sitenav__list">
+          <li class="sitenav__item"><a class="sitenav__link" href="#">Home</a></li>
+          <li class="sitenav__item"><a class="sitenav__link" href="#">About</a></li>
+          <li class="sitenav__item"><a class="sitenav__link" href="#">Services</a></li>
+          <li class="sitenav__item"><a class="sitenav__link" href="#">Reviews</a></li>
+        </ul>
+      </nav>
 
-<a class="button site-header__button" href="#">Get Started</a>
-</div>
+      <a class="button site-header__button" href="#">Get Started</a>
+    </div>
   </header>
+  <!-- ************************ -->
+  <!-- ***   MAIN SECTION   *** -->
+  <!-- ************************ -->
+  <main class="main-content">
+    <!-- ** HERO ** -->
+    <div class="hero">
+      <div class="hero__container container">
+        <div class="hero__inner">
+          <h1 class="hero__title">Connecting people is our <b class="hero__title-colored-part">business</b>
+          </h1>
+          <p class="hero__supplement">Smart Business</p>
+          <p class="hero__text">As a rule the organization settles on the inventive and media choices. Regularly it supplies supporting statistical.</p>
+
+          <!-- Hero Button -->
+          <div class="hero__button-wrapper">
+            <a class="button button--hero hero__button-wrapper-item" href="#">Get Started</a>
+            <a class="button button--white hero__button-wrapper-item" href="#">
+              <span class="button__inner">
+                <img class="button__icon" src="img/play-icon.svg" alt="play icon" width="29" height="29"> Play Video
+              </span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
 
 
-<!-- ************************ -->
-<!-- ***   MAIN SECTION   *** -->
-<!-- ************************ -->
-<main class="main-content"></main>
+
+  </main>
 
   <script src="js/main.js"></script>
 </body>
