add about-us section

--- a/index.html
+++ b/index.html
@@ -58,6 +58,19 @@
       </div>
     </div>
 
+    <!-- ** ABOUT US ** -->
+    <section class="about-us">
+      <div class="about-us__container container">
+        <img class="about-us__img" src="img/touching-the-sensor.jpg" alt="touching-the-sensor" width="486" height="486" srcset="img/touching-the-sensor.jpg 1x, img/touching-the-sensor@2x.jpg 2x">
+
+        <div class="about-us__content-wrapper">
+          <h2 class="about-us__title">Platform Dedicated To Promoting</h2>
+          <p class="about-us__supplement">About us</p>
+          <p class="about-us__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vestibulum sagittis ultrices  consectetur adipiscing elit. fringilla quisque pulvinar..</p>
+          <div><a class="button about-us__button" href="#">What we do?</a></div>
+        </div>
+      </div>
+    </section>
 
 
   </main>
