add features section

--- a/index.html
+++ b/index.html
@@ -72,6 +72,35 @@
       </div>
     </section>
 
+    <!-- ** FEATURE ** -->
+    <section class="features">
+      <div class="features__container container">
+        <h2 class="features__title">How We Work</h2>
+        <!-- Features list -->
+        <ul class="features__list">
+          <!-- * Item 1 * -->
+          <li class="features__list-item feature-card">
+            <img class="feature-card__img" src="img/start-design.svg" alt="start-design-icon">
+            <h3 class="feature-card__title">Start Design</h3>
+            <p class="feature-card__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra suscipit adipiscing elit.</p>
+          </li>
+
+          <!-- * Item 2 * -->
+          <li class="features__list-item feature-card">
+            <img class="feature-card__img" src="img/go-to-code.svg" alt="go=to-code-icon">
+            <h3 class="feature-card__title">Go to Code</h3>
+            <p class="feature-card__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra suscipit adipiscing elit.</p>
+          </li>
+
+          <!-- * Item 3 * -->
+          <li class="features__list-item feature-card">
+            <img class="feature-card__img" src="img/final-delivered.svg" alt="final-delivered-icon">
+            <h3 class="feature-card__title">Final Delivered</h3>
+            <p class="feature-card__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra suscipit adipiscing elit.</p>
+          </li>
+        </ul>
+      </div>
+    </section>
 
   </main>
 
