add customers section

--- a/index.html
+++ b/index.html
@@ -102,6 +102,42 @@
       </div>
     </section>
 
+    <!-- ** OUR CUSTOMERS ** -->
+    <section class="customers">
+      <div class="customers__container container">
+        <h2 class="customers__title">What Our Customers are Saying.</h2>
+        <!-- control -->
+        <div class="customers__control">
+          <!-- * left * -->
+          <a class="customers__control-item customers__control-item-left" href="#">
+            <img class="customers__control-item-img" src="img/arrow-icon.svg" alt="left">
+          </a>
+          <!-- * right * -->
+          <a class="customers__control-item customers__control-item-right" href="#">
+            <img class="customers__control-item-img" src="img/arrow-icon.svg" alt="right">
+          </a>
+        </div>
+
+        <!-- * Customers card * -->
+        <div class="customers__card-wrapper">
+          <!-- * 1 * -->
+          <div class="customer__card customer">
+            <img class="customer__img" src="img/leo-aminoff.svg" alt="Leo Aminoff">
+            <p class="customer__opinion">I recently concluded a complete messaging revamp for an excitin company </p>
+            <p class="customer__name">Leo Aminoff</p>
+            <span class="customer__occupation">Product Designer</span>
+          </div>
+
+          <!-- * 2 * -->
+          <div class="customer__card customer">
+            <img class="customer__img" src="img/carla-dias.svg" alt="Carla Dias">
+            <p class="customer__opinion">I recently concluded a complete messaging revamp for an excitin company </p>
+            <p class="customer__name">Carla Dias</p>
+            <span class="customer__occupation">Product Designer</span>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
   <script src="js/main.js"></script>
