--- a/index.html
+++ b/index.html
@@ -138,6 +138,26 @@
         </div>
       </div>
     </section>
+
+    <!-- == ++ CTA section ++ == -->
+    <section class="cta">
+      <div class="cta__container container">
+        <h2 class="cta__title">Sign Up to Our Newsletter</h2>
+        <p class="cta__info">Yours could be one of them.</p>
+        <!-- ** FORM ** -->
+        <form class="cta__form" action="https://echo.htmlacademy.ru" method="POST">
+          <div class="cta__form-input-wrapper">
+            <input class="cta__form-input" type="email" name="email" placeholder="Enter your email" aria-label="Email" required>
+            <div class="cta__form-input-error">Whoops, make sure it’s an email</div>
+          </div>
+          <!-- ==| form button |== -->
+          <button class="button" type="submit">Send</button>
+          </form>
+
+
+
+      </div>
+    </section>
   </main>
 
   <script src="js/main.js"></script>
