--- a/index.html
+++ b/index.html
@@ -152,14 +152,85 @@
           </div>
           <!-- ==| form button |== -->
           <button class="button" type="submit">Send</button>
-          </form>
-
-
-
+        </form>
       </div>
     </section>
   </main>
 
+  <!-- =+= FOOTER =+= -->
+  <footer class="site-footer">
+    <div class="site-footer__top">
+      <div class="site-footer__top-container container">
+        <div class="site-footer__logo-link-wrapper">
+          <a class="site-footer__logo logo" href="index.html">
+            <img class="logo__img" src="img/logo.svg" alt="Digital Ocean" width="70" height="70">
+          </a>
+          <a class="site-footer__link" href="#">Smart business</a>
+          <a class="site-footer__link" href="#">Community</a>
+        </div>
+        <!-- + footer list + -->
+        <ul class="footer-list">
+          <h3 class="footer-list__title">Resources</h3>
+          <li class="footer-list__item"><a class="footer-list__link" href="#">Start Business</a></li>
+          <li class="footer-list__item"><a class="footer-list__link" href="#">Digital Marketing</a></li>
+          <li class="footer-list__item"><a class="footer-list__link" href="#">Course Creation</a></li>
+          <li class="footer-list__item"><a class="footer-list__link" href="#">Business Accelerator</a></li>
+        </ul>
+
+        <ul class="footer-list">
+          <h3 class="footer-list__title">Mission</h3>
+          <li class="footer-list__item"><a class="footer-list__link" href="#">About Digital Analyst</a></li>
+          <li class="footer-list__item"><a class="footer-list__link" href="#">Team</a></li>
+          <li class="footer-list__item"><a class="footer-list__link" href="#">Become a Partner</a></li>
+          <li class="footer-list__item"><a class="footer-list__link" href="#">Privacy Policy</a></li>
+        </ul>
+
+        <ul class="footer-list">
+          <h3 class="footer-list__title">Contact
+          </h3>
+          <li class="footer-list__item"><a class="footer-list__link" href="tel:041-774073">041-774073</a></li>
+          <li class="footer-list__item"><a class="footer-list__link" href="#" target="_blank">hello@digitalanalyst.org</a></li>
+          <li class="footer-list__item"><a class="footer-list__link" href="#">Contact Form</a></li>
+        </ul>
+      </div>
+    </div>
+
+
+
+    <div class="site-footer__bottom">
+      <div class="site-footer__bottom-container container">
+        <p class="site-footer__org-info">© 2021 DigitalAnalyst.org. A 50 non-profit organization. EIN: -3410655</p>
+
+        <ul class="site-footer__socials-list socials">
+          <!-- * * item 1 * * -->
+          <li class="socials__item">
+            <a class="socials__link" href="https://facebook.com" target="_blank">
+              <img class="socials__icon" src="img/facebook.svg" alt="Facebook" width="18" height="31">
+            </a>
+          </li>
+          <!-- * * item 2 * * -->
+          <li class="socials__item">
+            <a class="socials__link" href="https://twitter.com" target="_blank">
+              <img class="socials__icon" src="img/twitter.svg" alt="Twitter" width="34" height="28">
+            </a>
+          </li>
+          <!-- * * item 3 * * -->
+          <li class="socials__item">
+            <a class="socials__link" href="https://youtube.com" target="_blank">
+              <img class="socials__icon" src="img/youtube.svg" alt="Youtube" width="38" height="27">
+            </a>
+          </li>
+          <!-- * * item 4 * * -->
+          <li class="socials__item">
+            <a class="socials__link" href="https://instagram.com" target="_blank">
+              <img class="socials__icon" src="img/instagram.svg" alt="Instagram" width="31" height="31">
+            </a>
+          </li>
+        </ul>
+        <a class="button button--white" href="#">Sign Up</a>
+      </div>
+    </div>
+  </footer>
   <script src="js/main.js"></script>
 </body>
 </html>
