prefix and minify css and compress svg

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   <!-- =============================== -->
   <!-- =====       STYLES        ===== -->
   <!-- =============================== -->
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/styles.css">
+  <!-- <link rel="stylesheet" href="css/normalize.css"> -->
+  <!-- <link rel="stylesheet" href="css/styles.css"> -->
+  <link rel="stylesheet" href="css/styles.min.css">
 </head>
 <body>
   <!-- = SITE HEADER = -->
@@ -122,7 +123,7 @@
         <div class="customers__card-wrapper">
           <!-- * 1 * -->
           <div class="customer__card customer">
-            <img class="customer__img" src="img/leo-aminoff.svg" alt="Leo Aminoff">
+            <img class="customer__img" src="img/leo-aminoff.png" alt="Leo Aminoff" width="61" height="61" srcset="img/leo-aminoff.png 1x, img/leo-aminoff@2x.png 2x">
             <p class="customer__opinion">I recently concluded a complete messaging revamp for an excitin company </p>
             <p class="customer__name">Leo Aminoff</p>
             <span class="customer__occupation">Product Designer</span>
@@ -130,7 +131,7 @@
 
           <!-- * 2 * -->
           <div class="customer__card customer">
-            <img class="customer__img" src="img/carla-dias.svg" alt="Carla Dias">
+            <img class="customer__img" src="img/carla-dias.png" alt="Carla Dias" width="61" height="61" srcset="img/carla-dias.png 1x, img/carla-dias@2x.png 2x">
             <p class="customer__opinion">I recently concluded a complete messaging revamp for an excitin company </p>
             <p class="customer__name">Carla Dias</p>
             <span class="customer__occupation">Product Designer</span>
@@ -170,7 +171,9 @@
         </div>
         <!-- + footer list + -->
         <ul class="footer-list">
-          <h3 class="footer-list__title">Resources</h3>
+          <li class="footer-list__item">
+            <h3 class="footer-list__title">Resources</h3>
+          </li>
           <li class="footer-list__item"><a class="footer-list__link" href="#">Start Business</a></li>
           <li class="footer-list__item"><a class="footer-list__link" href="#">Digital Marketing</a></li>
           <li class="footer-list__item"><a class="footer-list__link" href="#">Course Creation</a></li>
@@ -178,7 +181,9 @@
         </ul>
 
         <ul class="footer-list">
-          <h3 class="footer-list__title">Mission</h3>
+          <li class="footer-list__item">
+            <h3 class="footer-list__title">Mission</h3>
+          </li>
           <li class="footer-list__item"><a class="footer-list__link" href="#">About Digital Analyst</a></li>
           <li class="footer-list__item"><a class="footer-list__link" href="#">Team</a></li>
           <li class="footer-list__item"><a class="footer-list__link" href="#">Become a Partner</a></li>
@@ -186,8 +191,10 @@
         </ul>
 
         <ul class="footer-list">
-          <h3 class="footer-list__title">Contact
-          </h3>
+          <li class="footer-list__item">
+            <h3 class="footer-list__title">Contact
+            </h3>
+          </li>
           <li class="footer-list__item"><a class="footer-list__link" href="tel:041-774073">041-774073</a></li>
           <li class="footer-list__item"><a class="footer-list__link" href="#" target="_blank">hello@digitalanalyst.org</a></li>
           <li class="footer-list__item"><a class="footer-list__link" href="#">Contact Form</a></li>
