fix little mistakes

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <!-- =============================== -->
   <!-- =====       STYLES        ===== -->
   <!-- =============================== -->
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/styles.css">
-  <!-- <link rel="stylesheet" href="css/styles.min.css"> -->
+  <!-- <link rel="stylesheet" href="css/normalize.css"> -->
+  <!-- <link rel="stylesheet" href="css/styles.css"> -->
+  <link rel="stylesheet" href="css/styles.min.css">
 </head>
 <body>
   <!-- = SITE HEADER = -->
@@ -122,7 +122,7 @@
         <!-- * Customers card * -->
         <div class="customers__card-wrapper">
           <!-- * 1 * -->
-          <div class="customer__card customer">
+          <div class="customers__card customer">
             <img class="customer__img" src="img/leo-aminoff.png" alt="Leo Aminoff" width="61" height="61" srcset="img/leo-aminoff.png 1x, img/leo-aminoff@2x.png 2x">
             <p class="customer__opinion">I recently concluded a complete messaging revamp for an excitin company </p>
             <p class="customer__name">Leo Aminoff</p>
@@ -130,7 +130,7 @@
           </div>
 
           <!-- * 2 * -->
-          <div class="customer__card customer">
+          <div class="customers__card customer">
             <img class="customer__img" src="img/carla-dias.png" alt="Carla Dias" width="61" height="61" srcset="img/carla-dias.png 1x, img/carla-dias@2x.png 2x">
             <p class="customer__opinion">I recently concluded a complete messaging revamp for an excitin company </p>
             <p class="customer__name">Carla Dias</p>
